Fin d'actor (À l'exception de la section Movies) CSS terminé, à regarder le style ensemble.

--- a/css/actorCss.css
+++ b/css/actorCss.css
@@ -6,7 +6,7 @@
     width: 100%;
 }
 
-.info {
+.actor-itunes {
     overflow: auto;
     width: 100%;
     height: auto;
@@ -14,16 +14,14 @@
 }
 
 .imgActor {
-    max-width: 45%;
+    max-width: 50%;
     height: auto;
     float: left;
     margin: 2.5%;
 
-
-
 }
 .itunes{
-    max-width: 45%;
+    max-width: 40%;
     margin: 2.5%;
     position: absolute;
     top: 0;
@@ -47,8 +45,23 @@
 .movie-list {
     max-width: 100%;
 }
+.information {
+    overflow: auto;
+}
 
+/*CSS du texte*/
+#genre{
+    font-size: 140%;
+    font-weight: bold;
+}
+#text{
+    font-size: 120%;
+}
+#header{
+    font-size: 200%;
+}
 
+/*Pour la tablette*/
 @media screen and (min-width: 640px){
 
 
@@ -57,13 +70,14 @@
         width: 65%;
 
     }
-    .info {
+    .actor-itunes {
         float: left;
         width: 30%;
     }
     .imgActor{
         float: none;
         max-width: 100%;
+        margin: 0;
     }
     .itunes{
         max-width: 100%;
@@ -72,11 +86,28 @@
     .ilogo{
         margin: 5% 25% 5% 25%;
     }
+    #text{
+        font-size: 150%;
+    }
+    #genre{
+        font-size: 170%;
+        font-weight: bold;
+    }
+    #header{
+        font-size: 300%;
+    }
 }
-
 @media screen and (min-width: 960px){
-
-
+    #header{
+        font-size: 200%;
+    }
+    #text{
+        font-size: 100%;
+    }
+    #genre{
+        font-size: 130%;
+        font-weight: bold;
+    }
 }
 
 /* phone = 640px, Tablet = 960px */
