--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -1,32 +1,50 @@
 <div class="actor">
 
     <div>
-        <h1>{{name}}</h1>
-        <h2>Genre principal : {{genre}}</h2>
+        <h1 id="header">{{name}}</h1>
+        <p id="genre">Genre principal : {{genre}}</p>
     </div>
 
-    <div class="info">
+    <div class="information">
+        <div class="actor-itunes">
 
-        <img class="imgActor" src="url({{imageActor}}">
+            <img class="imgActor" src="url({{imageActor}}">
 
-        <div class="itunes">
-            <a href="{{itunesLink}}"><img class="ilogo" src="url(../../img/itunesLogo.png"></a>  </a>
-            <p id="centre">Apple Store </p>
+            <a href="{{itunesLink}}">
+                <div class="itunes">
+                    <img class="ilogo" src="url(../../img/itunesLogo.png">
+                    <p id="centre">Apple Store </p>
+                </div>
+            </a>
+
+        </div>
+
+        <div class="description" >
+            <p id="genre">Biography</p>
+            <p id="text"> William Bradley "Brad" Pitt (born December 18, 1963) is an American
+                actor and film producer. Pitt has received two Academy Award nominations
+                and four Golden Globe Award nominations, winning one. He has been
+                described as one of the world's most attractive men, a label for which
+                he has received substantial media attention. Pitt began his acting
+                career with television guest appearances, including a role on the
+                CBS prime-time soap opera Dallas in 1987. He later gained recognition
+                as the cowboy hitchhiker who seduces Geena Davis's character in the
+                1991 road movie Thelma & Louise. Pitt's first leading roles in
+                big-budget productions came with A River Runs Through It (1992)
+                and Interview with the Vampire (1994). He was cast opposite Anthony
+                Hopkins in the 1994 drama Legends of the Fall, which earned him his
+                first Golden Globe nomination. In 1995 he gave critically acclaimed
+                performances in the crime thriller Seven and the science fiction film
+                12 Monkeys, the latter securing him a Golden Globe Award for Best
+                Supporting Actor and an Academy Award nomination.</p>
+
+
         </div>
     </div>
 
-    <div class="description" >
-        <p> Ceci est une longue description.</p>
-        <p> Ceci est une longue description.</p>
-        <p> Ceci est une longue description.</p>
-
-
-
-
-    </div>
 
     <div>
-        <h2>Movies</h2>
+        <p id="genre">Movies</p>
     </div>
     <div>
 
