--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,4 +1,5 @@
 <div class="authentification">
+    <!-- Just to try with a movie banner, to be removed -->
     <img src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></img>
     <div class="inputFields">
         {{#each inputField}}
