Update some css for desktop version, still in test phase, should not be merged yet

--- a/js/templates/navigationBar.html
+++ b/js/templates/navigationBar.html
@@ -19,7 +19,6 @@
         <!-- {{#if user}} -->
         <!-- <div id="greeting-message">{{user}}</div> -->
         <!-- {{/if}}  -->
-        <li><a href="#" class="greeting-message">Luis</a></li>
 
         {{#if connected}}
         {{#each menuOptionConnected}}
@@ -34,7 +33,9 @@
         <div class="search-container">
             <div class="input-bar">
                 <input placeholder="Search..." class="search-input">
-                <span class="go-research"></span>
+                <span class="go-research">
+                    <img id="search-icon" src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png">
+                </span>
             </div>
             <div class="research-options collapsed">advanced research</div>
         </div>
