Add some css/html just to test authentification window box, and update nav-bar-desktop csss

--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,6 +1,12 @@
+<!-- Just to try with a movie banner, to be removed -->
+<img class="movie-banner" src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></img>
+
+<div class="connect">
+    <p>Connect with Google</p>
+    <p>Connect with Facebook</p>
+</div>
+<div class="divider"></div>
 <div class="authentification">
-    <!-- Just to try with a movie banner, to be removed -->
-    <img class="movie-banner" src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></img>
     <div class="inputFields">
         {{#each inputField}}
         <div class="{{inputName}}-box">
@@ -10,7 +16,7 @@
     </div>
     <div class="newEntry">
         <div>
-            <span class="submitAuthentication">This should be a login button, with a bit of css</span>
+            <span class="submitAuthentication"></span>
         </div>
         <div class="switch-authentication">
             {{#if newEntry}}
