--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ button {
         background-color: transparent;
     }
 
-    .navigation-options li, .search-bar li{
+    .navigation-options li{
         padding: 1em 1em 0.5em 1em;
         top: 1em;
         float:left;
@@ -369,6 +369,15 @@ button {
         border: none;
         display:-moz-groupbox;
     }
+    
+     .search-bar li{
+         padding: 1em 1em 0.5em .1em;
+        top: 1em;
+        float:left;
+        color: white;
+        border: none;
+        display:-moz-groupbox;
+     }
     
     .navigation-options li:hover {
        background-color: transparent;
@@ -412,7 +421,7 @@ button {
     }
   
     .search-input{
-    margin-left: 6.5vw;
+    margin-left: 8em;
     color: black;
     height: 2em;
     display:initial ;
@@ -430,29 +439,9 @@ button {
     -ms-transition: background .55s ease;
     -o-transition: background .55s ease;
     transition: background .55s ease;
+        position: relative;
     }
     
-    .go-research {
-    background-image: url= ("https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-128.png")
-    margin-left:0.3vw;
-    color: black;
-    height: 2em;
-    border-top-right-radius: 0.2em;
-    border-bottom-right-radius: 0.2em;
-    display:initial ;
-    background: transparent;
-    padding-top: 0.3em;
-    padding-left: 1.4em;
-    border-top: none;
-    border-bottom: none;
-    border-right: 0;
-    border-left: 0;
-    -webkit-transition: background .55s ease;
-    -moz-transition: background .55s ease;
-    -ms-transition: background .55s ease;
-    -o-transition: background .55s ease;
-    transition: background .55s ease;
-    }
     
     .input-bar input.search-input::-webkit-input-placeholder {
 
@@ -476,6 +465,10 @@ button {
     color: black;
     background: #FFCC00;
 }
+    .go-research{
+       background: transparent;
+        position: relative;
+    }
     
     /* ------ PAGE CONTENT ------ */
     div #content {
@@ -494,8 +487,55 @@ button {
     }
     
     .movie-banner{
+        width: 100%;
         height: 48vw;
     }
+  
+    /* testing a authentification box
+    
+    .authentification{
+        text-align: center;
+        width: 26em;
+        height: 15em;
+        padding: 2em 6em 1em 3em;
+        background-color: #FFCC00;
+        position:absolute;
+        color: black;
+        top:30%;
+        left:30%;
+        margin-top:-50px; 
+        margin-left:-100px; 
+        border-top-left-radius: 1.2em;
+        border-bottom-left-radius: 1.2em;
+        border-top-right-radius: 1.2em;
+        border-bottom-right-radius: 1.2em;
+        border: solid 1px black;
+        
+    }
+    
+    .connect p{
+        position:absolute;
+        margin-top:-50px; 
+        margin-left:-10px;
+        top:35%;
+        left:25%;
 
+        color:black;
 
+        z-index :100;
+    }
+    
+    
+   .authentification input{
+       background-color: white;
+       margin: .6em;
+       width: 25em;
+       height: 3em;
+   }
+    
+   .inputFields, .newEntry{
+       padding: 2em 0em 0.6em 15em;
+   }
+
+*/
 }
