--- a/css/watchlistStyle.css
+++ b/css/watchlistStyle.css
@@ -30,5 +30,13 @@
 }
 
 @media screen and (min-width: 640px){
+    #watchlistTitle{
+
+        width : 350px;
+        max-width: 300px;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        display : inline;
+    }
+
 
 }
