--- a/js/templates/watchlist.html
+++ b/js/templates/watchlist.html
@@ -1,13 +1,16 @@
+<head>
 <title>uMovie : Watchlist</title>
+</head>
+
 <div>
-    <h1>{{title}}</h1>
+    <h1 id="watchlistTitle">{{title}}</h1>
 </div>
 
-<div id="movies">
+<div class="movies">
     <h3>{{movies}}</h3>
     {{defaultTextMovies}}
 </div>
-<div id="tvSeries">
+<div class="tvSeries">
     <h3>{{tvSeries}}</h3>
     {{defaultTextTvSeries}}
 </div>
