--- a/js/templates/movie.html
+++ b/js/templates/movie.html
@@ -1,7 +1,29 @@
 <div class="movie-browser">
-    <div class="movieCover"><img src="img/movie/wolfOfWallStreet.jpg"></div>
-    <span><h1 class="movieTitle">{{title}}</h1></span>
-    <div class=""></div>
-    <div class="favorite">{{movie}}</div>
-    <a class="watchButton" href="">Watch Movie</a>
+    <div class="phoneScreenAlign">
+        <div class="movieCover"><img src="{{image}}"></div>
+        <div class="movieTitleWrapper">
+            <div class="titleInner">
+                <h1 class="movieTitle">
+                    <a href="{{link}}">{{title}}</a>
+                    <span><img src="img/itunesLogo.png"></span>
+                </h1>
+            </div>
+            <div class="movieSpecWrapper">
+                <div class="dateAndRating">
+                    <h6 class="bleuHeader">{{date}} - {{rating}}</h6>
+                </div>
+                <div class="genre">
+                    <h6>Genre: &nbsp;</h6><span><h6 class="bleuHeader">{{genre}}</h6></span>
+                </div>
+
+            </div>
+            <div class="movieDescription">{{description}}</div>
+            <div class="favorite">{{movie}}</div>
+        </div>
+        <div class="watchButtonWrapper">
+            <a class="watchButton" href="">Watch Movie</a>
+        </div>
+
+    </div>
+
 </div>
