--- a/css/watchlistStyle.css
+++ b/css/watchlistStyle.css
@@ -19,6 +19,7 @@
     width : 840px;
     height : 400px;
     color : yellow;
+    position: relative;
 
 }
 
@@ -27,6 +28,13 @@
 
     width : 840px;
     height : 400px;
+    position: relative;
+}
+
+.movieCaroussel > li{
+    display: inline;
+    width: 200px;
+    height: 300px;
 }
 
 @media screen and (min-width: 640px){
