--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -1,11 +1,20 @@
-<!-- Just to try with a movie banner, to be removed -->
-<img class="movie-banner" src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></img>
+<!-- Just to try with a movie banner, to be removed
+<div class="auth-container">
+    <img class="movie-banner" src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></img>
+-->
+
+<img class="movie-banner" src="http://www.seriesandreviews.com/wp-content/uploads/2016/01/Young-adults-watching-TV.jpg"></img>
+<div class="text">
+    <h1>Hello, welcome to UMovie.</h1>
+    <h2>Watch current episodes, full seasons, original series, and hit movies all in one place.</h2>
+</div>
+</div>
 
 <div class="connect">
     <p>Connect with Google</p>
     <p>Connect with Facebook</p>
 </div>
-<div class="divider"></div>
+<div class="divider"></div> -->
 <div class="authentification">
     <div class="inputFields">
         {{#each inputField}}
