Removes linear gradient over logo from desktop

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,11 @@ button {
         background-color: black;
         color: white;
     }
+    
+    .umovie-logo {
+        background: none;
+        position: relative;
+    }
 
     body {
         margin: 0;
