--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -8,13 +8,14 @@
     <h1>Hello, welcome to UMovie.</h1>
     <h2>Watch current episodes, full seasons, original series, and hit movies all in one place.</h2>
 </div>
-</div>
 
+<!--
 <div class="connect">
     <p>Connect with Google</p>
     <p>Connect with Facebook</p>
 </div>
 <div class="divider"></div> -->
+
 <div class="authentification">
     <div class="inputFields">
         {{#each inputField}}
@@ -25,7 +26,7 @@
     </div>
     <div class="newEntry">
         <div>
-            <span class="submitAuthentication"></span>
+            <span class="submitAuthentication">Authenticate here</span>
         </div>
         <div class="switch-authentication">
             {{#if newEntry}}
