--- a/js/templates/home.html
+++ b/js/templates/home.html
@@ -1,5 +1,5 @@
 <div class="movieContainer">
-    <div class="movieCover"><img src=({{url}}></div>
+    <div class="movieCover"><img src="http://www.forgetthebox.net/wp-content/uploads/2013/05/Iron-Man-3-2013-Movie-Title-Banner.jpg"></div>
     <div class="movie-browser">
         <h1>{{title}}</h1>
         <div class="favorite">{{movie}}</div>
