--- a/css/movieAndTvShow.css
+++ b/css/movieAndTvShow.css
@@ -3,7 +3,19 @@
     font-weight: 400;
 }
 
-h6 {display: inline;}
+h6 {
+    display: inline;
+    color: #999;
+}
+
+.blueHeader {
+    color: #ffffff !important;
+    font-weight: 400;
+}
+
+.movieDescription {
+    color: #999;
+}
 
 .watchButton {
     background: #3498db;
@@ -32,10 +44,9 @@ h6 {display: inline;}
     background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
     background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
-
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 640px) {
 
     div .movieCover {
         max-width: 150px !important;
@@ -51,13 +62,13 @@ h6 {display: inline;}
     }
 
     .movieTitle {
-        font-weight: 250;
+        font-weight: 400;
         font-size: 20px;
     }
 
     .movieTitleWrapper img {
-        height: 20px;
-        width: 20px;
+        height: 60px;
+        width: 60px;
 
         padding-left: 5px;
     }
@@ -91,13 +102,67 @@ h6 {display: inline;}
         width: 230px;
         bottom: 5px;
         background-color: green;
-
     }
+
     .movieDescription{
-        padding-top: 30px;
+        padding-top: 20px;
     }
 
+    .itunesLogo a img{
+        padding-top: 10px;
+        display: block;
+    }
 
+}
 
+@media screen and (max-width: 960px) and (min-width:640px) {
 
+    div #content {
+        max-width: 620px !important;
+        max-height: 400px !important;
+        padding-top: 120px;
+    }
+
+    .movie-browser .phoneScreenAlign {
+        position: relative;
+        background-color: blue;
+        width: 620px;
+        height: 620px;
+    }
+
+    div .movieCover {
+        max-width: 350px !important;
+        max-height: 400px !important;
+    }
+
+    .movie-browser .movieTitleWrapper {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        width: 300px;
+        height: 300px;
+        bottom: 5px;
+        background-color: green;
+    }
+
+    div .movieCover img {
+        max-width: 350px !important;
+        max-height: 400px !important;
+        padding-left: 5px;
+        padding-top: 5px;
+
+    }
+    .movieSpecWrapper {
+
+    }
+    .itunesLogo a img{
+        height: 60px;
+        width: 60px;
+        padding-top: 10px;
+        display: block;
+    }
+
+    .linksAccess {
+        display: block;
+    }
 }
