--- a/css/style.css
+++ b/css/style.css
@@ -268,10 +268,6 @@ button {
     padding-bottom: 0.5em;
 }
 
-.-box {
-    width: 160px;
-}
-
 .newEntry {
     width: 100%;
     max-width: 19em;
@@ -408,14 +404,10 @@ button {
     /* ------ Right side nav-bar ------ */
 
     .search-bar{
-        padding: 1em 1em 0.5em 1em;
-        float: right;
-        width: inherit;
         display: inline-flex;
-
-    }
-
-    .search-bar div li {
+        padding: 1em 1em 0.5em;
+        float: right;
+        width: 26em;
     }
 
 
@@ -520,55 +512,44 @@ button {
         font-size: 1.6em;
     }
 
-    .authentification, .connect{
+    .authentification{
+        background-color: black;
+        opacity: 0.6;
+        color: white;
+        text-align: center;
+        width: 20em;
+        height: 12em;
+        position:absolute;
+
+        top:25%;
+        left:63%;
+
+        border-top-left-radius: 1.2em;
+        border-bottom-left-radius: 1.2em;
+        border-top-right-radius: 1.2em;
+        border-bottom-right-radius: 1.2em;
+        border: solid 1px black;
+
+    }
+
+    .connect p{
+        position:absolute;
+        margin-top:-50px;
+        margin-left:-10px;
+        top:35%;
+        left:25%;
+
+        z-index :100;
     }
 
 
-   .authentification{
-       text-align: center;
-       width: 26em;
-       height: 15em;
-       padding: 2em 6em 1em 3em;
-       background-color: #FFCC00;
-       position:absolute;
-       color: black;
-       top:30%;
-       left:30%;
-       margin-top:-50px;
-       margin-left:-100px;
-       border-top-left-radius: 1.2em;
-       border-bottom-left-radius: 1.2em;
-       border-top-right-radius: 1.2em;
-       border-bottom-right-radius: 1.2em;
-       border: solid 1px black;
-
-   }
-
-   .connect p{
-       position:absolute;
-       margin-top:-50px;
-       margin-left:-10px;
-       top:35%;
-       left:25%;
-
-       color:black;
-
-       z-index :100;
-   }
-
-
-  .authentification input{
-      background-color: white;
-      margin: .6em;
-      width: 25em;
-      height: 3em;
-  }
-
-  .inputFields, .newEntry{
-      padding: 2em 0em 0.6em 15em;
-  }
-
-  .movieContainer img{
-    width:100%;
+    .authentification input{
+        background-color: white;
+        margin: 0.7em;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 3em;
     }
+
 }
