--- a/css/style.css
+++ b/css/style.css
@@ -367,7 +367,6 @@ button {
         cursor: pointer;
     }
 
-
     /* ------ NAV-BAR  ----- */
     #menu-content {
         height: 70px;
@@ -454,21 +453,14 @@ button {
         font-size: 1.8vw;
     }
 
-
     /* ------ Right side nav-bar ------ */
 
     .search-bar{
-        padding: 1em 1em 0.5em 1em;
-        float: right;
-        width: inherit;
         display: inline-flex;
-
+        padding: 1em 1em 0.5em;
+        float: right;
+        width: 26em;
     }
-
-    .search-bar div li {
-    }
-
-
 
     .search-bar li a:hover {
         background-color: transparent;
@@ -504,7 +496,6 @@ button {
         position: relative;
     }
 
-
     .input-bar input.search-input::-webkit-input-placeholder {
 
         color: #65737e;
@@ -531,7 +522,6 @@ button {
         background: transparent;
     }
 
-
     /* ------ PAGE CONTENT ------ */
     div #content {
         max-width: 100%;
@@ -539,7 +529,6 @@ button {
         background-color: black;
         color: white;
     }
-
 
     #container{
         background: black;
@@ -570,53 +559,43 @@ button {
         font-size: 1.6em;
     }
 
-    .authentification, .connect{
+    .authentification{
+        background-color: black;
+        opacity: 0.6;
+        color: white;
+        text-align: center;
+        width: 20em;
+        height: 12em;
+        position:absolute;
+
+        top:25%;
+        left:63%;
+
+        border-top-left-radius: 1.2em;
+        border-bottom-left-radius: 1.2em;
+        border-top-right-radius: 1.2em;
+        border-bottom-right-radius: 1.2em;
+        border: solid 1px black;
+
     }
 
+    .connect p{
+        position:absolute;
+        margin-top:-50px;
+        margin-left:-10px;
+        top:35%;
+        left:25%;
 
-   .authentification{
-       text-align: center;
-       width: 26em;
-       height: 15em;
-       padding: 2em 6em 1em 3em;
-       background-color: #FFCC00;
-       position:absolute;
-       color: black;
-       top:30%;
-       left:30%;
-       margin-top:-50px;
-       margin-left:-100px;
-       border-top-left-radius: 1.2em;
-       border-bottom-left-radius: 1.2em;
-       border-top-right-radius: 1.2em;
-       border-bottom-right-radius: 1.2em;
-       border: solid 1px black;
+        z-index :100;
+    }
 
-   }
-
-   .connect p{
-       position:absolute;
-       margin-top:-50px;
-       margin-left:-10px;
-       top:35%;
-       left:25%;
-
-       color:black;
-
-       z-index :100;
-   }
-
-
-  .authentification input{
-      background-color: white;
-      margin: .6em;
-      width: 25em;
-      height: 3em;
-  }
-
-  .inputFields, .newEntry{
-      padding: 2em 0em 0.6em 15em;
-  }
-
+    .authentification input{
+        background-color: white;
+        margin: 0.7em;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 3em;
+    }
 
 }
