fixed the default menu option sizing so they alway stay on the same line

--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ button {
 
     .navigation-options {
         position:initial;
-        width: 550px;
+        width: inherit;
 
         list-style: none;
         background: #33333;
