--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     .umovie-logo {
         z-index: 10000;
     }
+    
+    .navigation-options {
+        z-index: 10;
+    }
 }
 
 #site-logo {
