--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -2,7 +2,8 @@
 
     <div>
         <h1 id="header">{{name}}</h1>
-        <p id="genre">Genre principal : {{genre}}</p>
+        <p class="genre">Genre principal : {{genre}}</p>
+
     </div>
 
     <div class="information">
@@ -20,7 +21,7 @@
         </div>
 
         <div class="description" >
-            <p id="genre">Biography</p>
+            <p class="genre">Biography</p>
             <p id="text"> William Bradley "Brad" Pitt (born December 18, 1963) is an American
                 actor and film producer. Pitt has received two Academy Award nominations
                 and four Golden Globe Award nominations, winning one. He has been
@@ -44,11 +45,25 @@
 
 
     <div>
-        <p id="genre">Movies</p>
+        <p class="genre">Movies</p>
     </div>
-    <div>
+    <div id="movie">
+        <ul class="movie-menu">
+            <li>
+                <span> Inglourious Basterds</span>
+            </li>
+            <li>
+                <img class="movie-image" src="url(../../img/basterds.jpg">
+            </li>
+            <li>
+                <span> 21 août 2009</span>
+            </li>
+            <li>
+                <iframe class="youtube"  src="https://www.youtube.com/embed/6AtLlVNsuAc" frameborder="0" allowfullscreen></iframe>
+            </li>
+        </ul>
+    </div>
 
-    </div>
 
 </div>
 
