--- a/js/templates/actor.html
+++ b/js/templates/actor.html
@@ -47,7 +47,24 @@
     <div>
         <p class="genre">Movies</p>
     </div>
-    <div id="movie">
+    <div class="movie">
+        <ul class="movie-menu">
+            <li>
+                <span> Inglourious Basterds</span>
+            </li>
+            <li>
+                <img class="movie-image" src="url(../../img/basterds.jpg">
+            </li>
+            <li>
+                <span> 21 août 2009</span>
+            </li>
+            <li>
+                <iframe class="youtube"  src="https://www.youtube.com/embed/6AtLlVNsuAc" frameborder="0" allowfullscreen></iframe>
+            </li>
+        </ul>
+    </div>
+
+    <div class="movie">
         <ul class="movie-menu">
             <li>
                 <span> Inglourious Basterds</span>
