--- a/css/actorCss.css
+++ b/css/actorCss.css
@@ -60,6 +60,45 @@
 #header{
     font-size: 200%;
 }
+/*Fin du texte*/
+
+
+/*Section movie*/
+.movie-image{
+    width: 90%;
+    height:auto;
+    display:inline-block;
+    margin: 5% auto 5% auto;
+    max-width: 400px;
+}
+.movie{
+    height: 100%;
+    width: 100%;
+
+    background-color: grey;
+}
+.movie-menu{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 0;
+    list-style-type: none;
+}
+.movie-menu li{
+    flex-basis: 100%;
+    width: 100%;
+    margin-left:auto;
+    margin-right:auto;
+    text-align: center;
+}
+
+.youtube {
+
+    height: 100%;
+    max-width: 50%;
+
+}
+/*Fin Section movie*/
 
 /*Pour la tablette*/
 @media screen and (min-width: 640px){
@@ -112,9 +151,9 @@
         width: 100%;
         height:auto;
         display:inline-block;
-        margin: 1% 10% 1% 10%;
+        margin: 1% 0% 1% 0%;
     }
-    #movie{
+    .movie{
         height: 20%;
         width: 95%;
         margin-right: auto;
@@ -122,12 +161,14 @@
         background-color: grey;
     }
     .movie-menu{
-        margin: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
         padding: 0;
-
+        list-style-type: none;
     }
     .movie-menu li{
-        display: inline-block;
+        flex-basis: 25%;
         width: 25%;
 
     }
@@ -135,6 +176,7 @@
     .youtube {
         width: 100%;
         height: 100%;
+        max-width: 100%;
 
     }
 }
