Add button for the login in desktop mode

--- a/css/style.css
+++ b/css/style.css
@@ -665,8 +665,7 @@ button {
     .text h1 {
         font-size: 4.1em;
         text-align: center;
-
-        margin-top: -4.7em;
+        margin-top: -35%;
     }
 
     .text h2 {
@@ -714,5 +713,32 @@ button {
 
     .search-container {
         width: 100%;
+    }
+
+    .submitAuthentication{
+        padding: 4px 8px;
+        border: 1px solid #000000;
+        background: -webkit-gradient(linear, left top, left bottom, from(#E8A023), to(#FFBB00));
+        background: -webkit-linear-gradient(top, #E8A023, #FFBB00);
+        background: -moz-linear-gradient(top, #E8A023, #FFBB00);
+        background: -ms-linear-gradient(top, #E8A023, #FFBB00);
+        background: -o-linear-gradient(top, #E8A023, #FFBB00);
+        background-color: #FFBB00;
+        box-shadow: 0px 7px 2px -5px #1A1A1A, inset 0px 0px 3px #99CC00;
+        -webkit-box-shadow: 0px 7px 2px -5px #1A1A1A, inset 0px 0px 3px #99CC00;
+        -moz-box-shadow: 0px 7px 2px -5px #1A1A1A, inset 0px 0px 3px #99CC00;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        text-shadow: #FFFF77 1px 1px 0px;
+        color: #000000;
+        font-size: 15px;
+        font-family: Helvetica;
+        text-decoration: none;
+        font-weight: bold;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        cursor: pointer;
     }
 }
