--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -14,7 +14,7 @@
     </div>
     <div class="newEntry">
         <div>
-            <span class="submitAuthentication">Authenticate here</span>
+            <span class="submitAuthentication">Log in</span>
         </div>
         <div class="switch-authentication">
             {{#if newEntry}}
