--- a/js/templates/authentication.html
+++ b/js/templates/authentication.html
@@ -13,7 +13,7 @@
         {{/each}}
     </div>
     <div class="newEntry">
-        <div>
+        <div class="authentication-btn">
             <span class="submitAuthentication">Log in</span>
         </div>
         <div class="switch-authentication">
